# dictu-pq

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dpack.json  mod.du
scripts/: buildenv.pl  install.du  unix_build.sh
src/: dictu-pg.c  dictu-pg.h  portable_endian.h
